[package]
name = "firmware-manager"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[workspace]
members = [ "gtk", "gtk/ffi", "notify", "tools" ]

[dependencies]
better-panic = "0.3.0"
futures = "0.3.28"
fwupd-dbus = "0.3.0"
human-sort = "0.2.2"
log = "0.4.17"
shrinkwraprs = "0.3.0"
system76-firmware-daemon = { git = "https://github.com/pop-os/system76-firmware" }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt"] }
tokio-udev = "0.8.0"
users = "0.11.0"
xdg = "2.5.0"
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
rust-embed = "6.6.1"
once_cell = "1.17.1"
slotmap = "1.0.6"
dashmap = "5.4.0"
apply = "0.3.0"
