[package]
name = "firmware-manager"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"

[workspace]
members = [ "gtk", "gtk/ffi", "notify", "tools" ]

[dependencies]
apply = "0.3.0"
better-panic = "0.3.0"
dashmap = "5.5.3"
futures = "0.3.30"
fwupd-dbus = "0.3.0"
human-sort = "0.2.2"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
log = "0.4.20"
once_cell = "1.19.0"
rust-embed = "8.0.0"
shrinkwraprs = "0.3.0"
slotmap = "1.0.7"
system76-firmware-daemon = { git = "https://github.com/pop-os/system76-firmware" }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt"] }
tokio-udev = "0.9.1"
users = "0.11.0"
xdg = "2.5.2"

[profile.release]
lto = "fat"
