[package]
name = "firmware-manager-ffi"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[build-dependencies]
cdylib-link-lines = "0.1"

[dependencies]
firmware-manager = { path = "../" }
glib = "0.7.1"
gtk-sys = "0.8.0"
gtk = "0.6.0"

[lib]
name = "firmware_manager"
crate-type = [ "cdylib" ]
