[package]
name = "firmware-manager-gtk"
version = "0.1.4"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[features]
default = [ "fwupd", "system76" ]
fwupd = []
system76 = []

[dependencies]
better-panic = "0.3.0"
cascade = "1.0.1"
clap = "3.2.22"
fern = "0.6.1"
firmware-manager = { path = "../" }
gdk = "0.15.4"
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.15.5", features = [ "v3_22" ] }
html2runes = "1.0.1"
log = "0.4.17"
shrinkwraprs = "0.3.0"
upower_dbus = "0.3.0"
yansi = "0.5.1"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.1"
once_cell = "1.15.0"
slotmap = "1.0.6"
