[package]
name = "firmware-manager-gtk"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[features]
default = ["fwupd", "system76"]
fwupd = []
system76 = []

[dependencies]
better-panic = "0.3.0"
cascade = "1.0.1"
chrono = "0.4"
clap = "4.2.5"
fern = "0.6.2"
firmware-manager = { path = "../" }
gdk = "0.15.4"
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.15.5", features = [ "v3_22" ] }
log = "0.4.17"
shrinkwraprs = "0.3.0"
upower_dbus = "0.1.0"
yansi = "0.5.1"
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
rust-embed = "6.6.1"
once_cell = "1.17.1"
slotmap = "1.0.6"
html2md = "0.2.14"
