[package]
name = "firmware-manager-gtk"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"

[features]
default = ["fwupd", "system76"]
fwupd = []
system76 = []

[dependencies]
better-panic = "0.3.0"
cascade = "1.0.1"
clap = "4.4.18"
fern = "0.6.2"
firmware-manager = { path = "../" }
gdk = "0.15.4"
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.15.5", features = [ "v3_22" ] }
html2md = "0.2.14"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
log = "0.4.17"
once_cell = "1.19.0"
rust-embed = "8.0.0"
shrinkwraprs = "0.3.0"
slotmap = "1.0.6"
upower_dbus = "0.1.0"
yansi = "0.5.1"
