[package]
name = "firmware-manager-notify"
version = "0.1.4"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[features]
default = [ "fwupd", "system76" ]
system76 = []
fwupd = []

[build-dependencies]
fomat-macros = "0.3.1"

[dependencies]
notify-rust = { version = "4.5.10", default-features = false, features = ["dbus"] }
firmware-manager = { path = "../" }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.1"
once_cell = "1.15.0"
