[package]
name = "firmware-manager-notify"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"

[features]
default = [ "fwupd", "system76" ]
system76 = []
fwupd = []

[build-dependencies]
fomat-macros = "0.3.2"

[dependencies]
notify-rust = { version = "4.8.0", default-features = false, features = ["dbus"] }
firmware-manager = { path = "../" }
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
rust-embed = "6.6.1"
once_cell = "1.17.1"
