[package]
name = "firmware-manager-notify"
version = "0.1.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"

[features]
default = [ "fwupd", "system76" ]
system76 = []
fwupd = []

[build-dependencies]
fomat-macros = "0.3.2"

[dependencies]
firmware-manager = { path = "../" }
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
notify-rust = { version = "4.10.0", default-features = false, features = ["dbus"] }
once_cell = "1.19.0"
rust-embed = "8.0.0"
