[package]
name = "tools"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"
description = "build tools used by this project"

[[bin]]
name = "desktop-entry"
path = "src/desktop_entry.rs"

[[bin]]
name = "pkgconfig"
path = "src/pkgconfig.rs"

[dependencies]
clap = "4.4.18"
freedesktop-desktop-entry = "0.1.1"
