[package]
name = "firmware-manager-gtk-ffi"
version = "0.1.4"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[lib]
name = "firmware_manager"
crate-type = [ "cdylib" ]

[build-dependencies]
cdylib-link-lines = "0.1.4"

[dependencies]
glib = "0.14.0"
gtk-sys = "0.14.0"
gtk = "0.14.0"
firmware-manager-gtk = { path = "../", default-features = false, features = [ "fwupd","system76", ] }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
once_cell = "1.12.0"
